
set( CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} )
add_library( atlas_field_api_objects OBJECT field_ranksuff_module.fypp field_factory_module.fypp field_abort_module.F90 )
target_link_libraries( atlas_field_api_objects PUBLIC atlas_f )
if (OpenMP_Fortran_FOUND)
  target_link_libraries( atlas_field_api_objects PUBLIC OpenMP::OpenMP_Fortran )
endif()
if (OpenACC_Fortran_FOUND)
  target_link_libraries( atlas_field_api_objects PUBLIC OpenACC::OpenACC_Fortran )
endif()
fckit_target_preprocess_fypp( atlas_field_api_objects )

foreach( prec sp dp )
    add_library( atlas_field_api_${prec} field_module.F90)
    target_link_libraries( atlas_field_api_${prec} PUBLIC atlas_field_api_objects )
    if( prec STREQUAL "sp" )
        target_compile_definitions( atlas_field_api_${prec} PRIVATE SINGLE_PRECISION )
    endif()
    target_include_directories(atlas_field_api_${prec} PUBLIC $<BUILD_INTERFACE:${CMAKE_Fortran_MODULE_DIRECTORY}>)
endforeach()
