function( add_example target )
  set( options PRIVATE PUBLIC INTERFACE  )
  set( single_value_args "")
  set( multi_value_args "" )
  cmake_parse_arguments(PARSE_ARGV 1 _PAR "${options}" "${single_value_args}" "${multi_value_args}")
  add_executable(${target})
  target_host_device_sources( ${target} PRIVATE ${_PAR_UNPARSED_ARGUMENTS})
  target_link_libraries( ${target} PRIVATE pluto )
  target_include_directories( ${target} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )
endfunction()

add_example(is_on_device is_on_device.cc)
add_example(use_streams use_streams.cc)
add_example(use_unified_memory use_unified_memory.cc)
add_example(use_memory_pool use_memory_pool.cc)
